and for 3 degree vertices